--- a/style.css
+++ b/style.css
@@ -22,11 +22,6 @@ body{
     position: absolute
 }
 
-header{
-    background-color: #c3c3c3;
-    height: 0px;
-}
-
 .menu{
     width: 150px; 
     height: 60px;
@@ -35,8 +30,8 @@ header{
 }
 
 .menu a {
-    color: #e5e5e5;
     text-decoration: none;
+    color: #c3c3c3;
     text-transform: uppercase;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -78,6 +73,7 @@ header{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-color: #c3c3c3;
 }
 .gallery__item--1 {
     grid-column-start: 2;
@@ -182,15 +178,34 @@ header{
     text-transform: uppercase;
     color: black;
 }
-footer{
+
+.rodape{
+    display: grid;
+    height: 100%;
     width: 100%;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.footer-content{
-    width: 60px;
-    display: flex;
-    justify-content: space-between;
-}
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 4vw);
+    grid-column-gap: 10px;
+    grid-row-gap: 5px;
+    background-color: #c3c3c3;
+ }
+ .col1{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+ }
+ .col4{
+    grid-column-start: 6;
+    grid-column-end: 7;
+    grid-row-start: 2;
+    grid-row-end: 2;
+ }
+ .tele_img{
+    grid-column-start: 6;
+    grid-column-end: 6;
+    grid-row-start: 3;
+    grid-row-end: 3;
+    font-size: 20px;
+ }
+ 
